--- a/app/src/index.css
+++ b/app/src/index.css
@@ -58,3 +58,35 @@ body {
 .btn-primary:hover{
   background-color: hsl(203, 89%, 43%);
 }
+
+.tweet-card {
+  display: flex;
+  gap: 10px;
+  width: 500px;
+  padding: 10px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.top-row {
+  display: flex;
+  gap: 5px;
+}
+
+.name {
+  font-weight: bold;
+}
+
+.username {
+  color: rgb(157, 157, 157);
+}
+
+.top-row {
+  margin-bottom: 5px;
+}
+
+.bottom-row p {
+  line-height: 1.3;
+}
